--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div id="road">
-        <img src="c2.png" id="img">
+        <img src="c2.webp" id="img">
     </div>
     <script src="js/myjs.js"></script>
 </body>
